# Copyright (C) 2023, Travis Pressler, All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "zhenakwesewen"
version = "0.1.0"
authors = ["Travis P. <travisjpressler@gmail.com>"]
edition = "2018"

[lib]
name = "libzhenakwesewen"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
# For code coverage
grcov = "0.8.13"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]
